<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    tools:context=".activity.LogIn"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/headerSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,UseCompoundDrawables">

            <ImageView
                android:layout_width="@dimen/_315sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_gravity="top"
                android:src="@drawable/landing_page_header"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:fontFamily="@font/ubuntu_regular"
                android:text="@string/sign_in_to_your_account"
                android:textSize="@dimen/_20ssp"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/headerSignIn">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:id="@+id/inputEmail"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/you_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:background="@null"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:id="@+id/inputPassword"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp"
                    android:background="@null"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@+id/cardSignIn" />

        <ProgressBar
            android:id="@+id/signInProgressBar"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
            app:layout_constraintEnd_toEndOf="@id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/textNoAccount"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textSignUp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_6sdp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNoAccount"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>